[package]
name = "mango-mvcc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Mango MVCC primitives — Revision and on-disk key encoding (etcd-compatible). Phase 2 foundation per ROADMAP:838."
publish = false

[dependencies]
# `Revision` is pure data; `KeyDecodeError` derives via thiserror.
thiserror.workspace = true
# `bytes::Bytes` for `KeyValue::{key, value}` — cheap clone (refcount
# fetch_add) so `Range` results can be passed across boundaries
# without copying. Already transitive via `mango-storage`; declared
# directly so the dep edge is visible in `cargo tree`.
bytes.workspace = true
# `BucketId`, `Backend`, `BackendError` for the bucket-registration
# helper. `mango-storage` is the trait surface; we touch nothing
# below it (no redb, no I/O).
mango-storage = { path = "../mango-storage" }
# `ahash::RandomState` for the L840 sharded `KeyIndex` — HashDoS
# resistance via per-process OS-CSPRNG-derived seed. See workspace
# Cargo.toml for the rationale.
ahash = { workspace = true }
# `parking_lot::RwLock` for per-shard locks in `ShardedKeyIndex`.
# Workspace-blessed alternative to `std::sync` (clippy.toml ban).
parking_lot = { workspace = true }
# `tokio::sync::Mutex` for the L844 `MvccStore` writer lock — the
# guard is held across `commit_batch().await`, and `parking_lot`
# guards are `!Send` (would block `tokio::spawn`). `sync` only:
# no runtime, no I/O, no scheduler. Workspace alias is
# `madsim-tokio`; under default builds this is real tokio's `sync`
# module. See `.planning/l844-mvcc-kv-api.plan.md` §4.1.
tokio = { workspace = true, features = ["sync"] }
# `arc_swap::ArcSwap<Snapshot>` for L846 lock-free snapshot
# publication. Workspace-blessed; rationale in workspace Cargo.toml.
arc-swap = { workspace = true }
# Optional `proptest::Arbitrary`-style strategies for `Revision` and
# `KeyKind`. Gated so the dep is invisible in default builds. L851's
# model proptest will turn this on as a dev-dep feature.
proptest = { version = "1.5", optional = true }

[features]
# Exposes `proptest::strategy::Strategy` adapters for `Revision` and
# `KeyKind`. Off by default so the core dep surface stays minimal.
proptest = ["dep:proptest"]
# Exposes `ShardedKeyIndex::with_seed(...)` to integration-test crates
# (notably L842's hostile-key DoS test in
# `crates/mango-mvcc/tests/security/`). Off by default; integration
# tests in other crates cannot see `cfg(test)` items, so a feature
# flag is the right gate.
test-seed = []

[dev-dependencies]
# Cross-check encoding against an etcd-produced golden vector and
# exercise round-trip / lex-order properties. See
# crates/mango-storage/Cargo.toml line 130 for the workspace pattern.
proptest = "1.5"
# Concrete `Backend` impl for `bucket::register_against_real_backend`
# and `InMemBackend` for the L844 store unit tests. The
# `test-utils` feature exposes `InMemBackend` per
# crates/mango-storage's feature contract.
mango-storage = { path = "../mango-storage", features = ["test-utils"] }
tempfile = "3"
# `#[tokio::test]` driver for the async open-rejects-non-empty
# tests (the seed-and-commit setup is async). `rt-multi-thread`
# matches the surface used by `crates/mango-storage/tests/`.
# `time` for `tokio::time::timeout` used in the L847 snapshot
# consistency proptest's per-case 15s timeout (the rest of the
# tests use `macros` + `rt-multi-thread` only).
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

# loom is a `cfg(loom)` target dep, not a dev-dep, because
# `sharded_key_index` references `loom::sync::RwLock` under
# `#[cfg(loom)]` from the *library* path. Dev-deps are scoped to
# non-lib targets only, so they would compile the lib without loom
# and fail on the `loom::...` paths under `--cfg loom`. Same idiom
# as `crates/mango-loom-demo/Cargo.toml:23-24`. The dep is pulled
# in only when `RUSTFLAGS="--cfg loom"` is set; default builds
# remain loom-free.
[target.'cfg(loom)'.dependencies]
loom.workspace = true
# Transitive tokio (mango-storage → madsim-tokio → real tokio)
# requires the `sync` feature under `--cfg loom` for `AtomicWaker`
# (`tokio/src/sync/mod.rs`'s `cfg(loom)` arm). mango-mvcc does not
# use tokio directly; declaring it here triggers cargo feature
# unification on the transitive copy. Scoped to `cfg(loom)` so the
# default build's tokio feature set is unchanged.
tokio = { workspace = true, features = ["sync"] }

[lints]
workspace = true

# L842 hostile-key DoS test. Lives under `tests/` (Cargo
# integration-test convention) but compiles only when the
# `test-seed` feature is on — the test imports
# `ShardedKeyIndex::with_seed` and `shard_for_test` which are
# `cfg(any(test, feature = "test-seed"))`-gated. Without
# `required-features`, default `cargo nextest --workspace
# --all-targets` would try to compile this target and fail on
# the gated symbols. Same pattern is exercised by the
# `--features mango-mvcc/test-seed --test
# security_keyindex_dos` step in `.github/workflows/ci.yml`,
# and by `cargo test --all-features` (alternate trigger).
[[test]]
name = "security_keyindex_dos"
path = "tests/security_keyindex_dos.rs"
required-features = ["test-seed"]
