[package]
name = "mango-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Mango storage backend (Phase 1 skeleton; Backend + RaftLogStore traits land per ROADMAP.md)."
publish = false

[dependencies]
redb.workspace = true
# Consumed via `.workspace = true` with NO feature override: the workspace
# entry's `default-features = false, features = ["internals"]` inherits
# verbatim. Adding a local `features = [...]` here would ADD to the
# workspace set — re-enabling `lz4-compression` would re-introduce the
# C FFI dep (ADR 0002 §W5), and re-enabling `scripting` would pull
# MPL-2.0 (via rhai/smartstring).
raft-engine.workspace = true
# Trait-surface deps — see ROADMAP:816 and the workspace declarations
# for rationale. bytes carries Raft entry payloads and snapshot bytes;
# thiserror derives BackendError.
bytes.workspace = true
thiserror.workspace = true
# ROADMAP:817 (Backend impl): parking_lot for the Database RwLock.
# See Cargo.toml workspace entry for the ban-override rationale.
parking_lot.workspace = true
# ROADMAP:817: tokio::task::spawn_blocking is required so async commit
# methods do NOT block tokio worker threads with redb's synchronous
# fsync. `rt` alone covers spawn_blocking — `rt-multi-thread` is
# deliberately NOT listed because the caller owns their runtime
# flavor. Workspace entry renames to madsim-tokio; under default
# build it re-exports real tokio, under --cfg madsim it substitutes
# the deterministic simulator. See docs/madsim.md.
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
# ROADMAP:817 integration tests open a real redb on disk in a
# tempdir; tempfile is the workspace-standard primitive. Exemption
# already present in supply-chain/config.toml (tempfile@3.27.0).
tempfile = "3"
# ROADMAP:817: madsim `#[madsim::test]` macro for the smoke test
# under `--cfg madsim`. mango-storage joins the curated subset in
# this PR (see [workspace.metadata.mango.madsim].crates).
madsim = { workspace = true }
# ROADMAP:817 integration tests drive the async commit API through
# `#[tokio::test]`; the concurrent-committer test needs a real
# multi-thread runtime. Features here are ADDITIVE to the main
# `tokio = { features = ["rt"] }` dep; cargo merges them in the test
# target. Under `--cfg madsim` these features are a no-op (the sim
# runtime ignores them) but the test file itself is gated
# `#![cfg(not(madsim))]`.
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
