[package]
name = "mango-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Mango storage backend (Phase 1 skeleton; Backend + RaftLogStore traits land per ROADMAP.md)."
publish = false

[dependencies]
redb.workspace = true
# Consumed via `.workspace = true` with NO feature override: the workspace
# entry's `default-features = false, features = ["internals"]` inherits
# verbatim. Adding a local `features = [...]` here would ADD to the
# workspace set — re-enabling `lz4-compression` would re-introduce the
# C FFI dep (ADR 0002 §W5), and re-enabling `scripting` would pull
# MPL-2.0 (via rhai/smartstring).
raft-engine.workspace = true
# ROADMAP:818: raft-rs SHA-pinned via workspace. Used ONLY for the
# protobuf type surface (`raft::eraftpb::{Entry, HardState,
# SnapshotMetadata}`) at the `RaftLogStore` conversion boundary; we do
# NOT exercise raft-rs's state machine here (that's Phase 3
# `mango-raft`). The workspace entry sets `default-features = false,
# features = ["protobuf-codec"]` — local features MUST stay empty to
# avoid re-enabling `default-logger` (slog transitives).
raft.workspace = true
# Trait-surface deps — see ROADMAP:816 and the workspace declarations
# for rationale. bytes carries Raft entry payloads and snapshot bytes;
# thiserror derives BackendError.
bytes.workspace = true
thiserror.workspace = true
# ROADMAP:817 (Backend impl): parking_lot for the Database RwLock.
# See Cargo.toml workspace entry for the ban-override rationale.
parking_lot.workspace = true
# ROADMAP:817: tokio::task::spawn_blocking is required so async commit
# methods do NOT block tokio worker threads with redb's synchronous
# fsync. `rt` alone covers spawn_blocking — `rt-multi-thread` is
# deliberately NOT listed because the caller owns their runtime
# flavor. Workspace entry renames to madsim-tokio; under default
# build it re-exports real tokio, under --cfg madsim it substitutes
# the deterministic simulator. See docs/madsim.md.
tokio = { workspace = true, features = ["rt"] }

[features]
# ROADMAP:821 engine-swap dry-run. Gates the in-memory reference
# `Backend` impl (`crate::inmem`) so it is invisible in default
# builds. Tests opt in via the self-referential dev-dependency
# below; downstream crates that want the in-mem impl for their own
# tests do `mango-storage = { path = "...", features = ["test-utils"] }`
# in their own dev-dependencies.
test-utils = []
# ROADMAP:826 fault-injection harness. Gates the
# `RedbBackend::with_backend` test-only constructor in
# `crate::redb`. Underscore prefix is cargo convention for
# "private; do not depend on this from outside this crate". The
# constructor is also `#[doc(hidden)]`; this feature is only
# enabled by the self-referential dev-dependency below so the
# integration test at `tests/crash_recovery_eio.rs` can construct
# a `RedbBackend` over a custom `redb::StorageBackend` wrapper.
# Downstream consumers that opt into `test-utils` for
# `InMemBackend` MUST NOT also opt into this feature.
_eio_test_internal = []

[dev-dependencies]
# ROADMAP:821: enable the `test-utils` feature when this crate is
# built as a dev-dep of itself, so integration tests in
# `crates/mango-storage/tests/` see `mango_storage::InMemBackend`
# without any per-test-target gymnastics. Self-referential dev-deps
# are a recognized Cargo idiom (rust-bitcoin, serde, others).
#
# `version = "0.1.0"` is required even for `path = "."`: cargo-deny's
# `wildcard = "deny"` policy flags any dependency without a version
# requirement, including self-referential path deps. The version
# string MUST track the package's own `version.workspace = true`
# (currently 0.1.0 in the workspace root); on the next workspace
# version bump this also bumps.
mango-storage = { path = ".", version = "0.1.0", features = [
    "test-utils",
    "_eio_test_internal",
] }
# ROADMAP:817 integration tests open a real redb on disk in a
# tempdir; tempfile is the workspace-standard primitive. Exemption
# already present in supply-chain/config.toml (tempfile@3.27.0).
tempfile = "3"
# ROADMAP:817: madsim `#[madsim::test]` macro for the smoke test
# under `--cfg madsim`. mango-storage joins the curated subset in
# this PR (see [workspace.metadata.mango.madsim].crates).
madsim = { workspace = true }
# ROADMAP:817 integration tests drive the async commit API through
# `#[tokio::test]`; the concurrent-committer test needs a real
# multi-thread runtime. Features here are ADDITIVE to the main
# `tokio = { features = ["rt"] }` dep; cargo merges them in the test
# target. Under `--cfg madsim` these features are a no-op (the sim
# runtime ignores them) but the test file itself is gated
# `#![cfg(not(madsim))]`.
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
# ROADMAP:819: differential-test harness vs bbolt. proptest drives the
# op-sequence strategy; base64 encodes byte keys/values over the
# JSON IPC to the Go oracle subprocess; serde_json frames the wire
# protocol; serde derives are needed by the seed-replay driver
# (plan §9 commit 9 step 6) for `DiffOp` / `GroupOp` round-trip
# through `tests/differential_vs_bbolt/seeds/*.json`. All four are
# test-only (gated behind the integration test at
# crates/mango-storage/tests/differential_vs_bbolt.rs), so they
# live in dev-dependencies and never reach a release binary. Supply-
# chain exemptions for the transitive trees are recorded in
# supply-chain/config.toml with a review-by date — `serde` /
# `serde_derive` / `serde_core` are already exempted as transitives
# via raft-engine and raft-rs, so this direct use adds no new audit
# surface. The seed-replay driver hand-rolls FNV-1a-64 for case-id
# hashing (see `case_hash` in differential_vs_bbolt.rs) rather than
# pulling sha2 + 6 transitives — only 8 hex chars surface in the
# failure-artifact dirname.
proptest = "1.5"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
